--- a/client/src/components/css/Chat.css
+++ b/client/src/components/css/Chat.css
@@ -19,7 +19,7 @@
 }
 
 .chatBottom {
-    position: absolute;
+    position: fixed;
     
     padding-bottom: 20px;
     display: flex;
@@ -31,6 +31,7 @@
 
     margin: 0;
     padding: 0;
+    z-index: 2;
 }
 
 .chatBottom form {
@@ -78,13 +79,14 @@
     width: 100%;
     height: 70px;
 
-    position: absolute;
+    position: fixed;
     bottom: 0;
-    z-index: -1;
+    z-index: 1;
     
 }
 
 .message {
+    display: inline-block;
     width: 55%;
     margin-left: 15px;
     margin-right: 15px;
@@ -115,6 +117,8 @@
     color: #818181;
     margin-left: 15px;
 }
+
+
 
 
 
