--- a/client/src/components/css/Chat.css
+++ b/client/src/components/css/Chat.css
@@ -19,7 +19,7 @@
 }
 
 .chatBottom {
-    position: fixed;
+    position: absolute;
     
     padding-bottom: 20px;
     display: flex;
@@ -31,7 +31,6 @@
 
     margin: 0;
     padding: 0;
-    z-index: 2;
 }
 
 .chatBottom form {
@@ -79,9 +78,9 @@
     width: 100%;
     height: 70px;
 
-    position: fixed;
+    position: absolute;
     bottom: 0;
-    z-index: 1;
+    z-index: -1;
     
 }
 
@@ -118,7 +117,11 @@
     margin-left: 15px;
 }
 
-
+.chatContent {
+    height: 680px;
+    
+    overflow: auto;
+}
 
 
 
