--- a/client/src/components/css/Chat.css
+++ b/client/src/components/css/Chat.css
@@ -1,3 +1,9 @@
+.chat {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
 .chatHeader {
     background-color: black;
     width: 100%;
@@ -6,7 +12,7 @@
 .chatHeader h3 {
     font-weight: 200;
     font-size: 22px;
-    padding: 10px 0 0 10px;
+    padding: 10px;
     text-transform: capitalize;
 }
 
@@ -19,18 +25,10 @@
 }
 
 .chatBottom {
-    position: absolute;
+    position: relative;
+    width: 95%;
     
-    padding-bottom: 20px;
-    display: flex;
-    width: 90%;
-
-    bottom: 15px;
-    left: 50%; /* Position X halfway in */
-    transform: translate(-50%, 0%); /* Move it halfway back(x,y) */
-
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
 }
 
 .chatBottom form {
@@ -117,13 +115,34 @@
     margin-left: 15px;
 }
 
-.chatContent {
-    height: 680px;
+.chatBottom, .chatHeader {
+    /* position: absolute;
     
-    overflow: auto;
+    padding-bottom: 20px;
+    display: flex;
+    width: 90%;
+
+    bottom: 15px;
+    left: 50%; 
+    transform: translate(-50%, 0%); 
+
+    margin: 0;
+    padding: 0; */
+    flex-basis: 5vh;
 }
 
+.chatContent {
+    flex-basis: 85vh;
+    overflow-y: auto;
+    padding: 10px 0;
+}
 
+@media (max-height: 767px)
+{
+    .chatContent {
+        flex-basis: 83vh;
+    }
+}
 
 
 
