[/] Fixed sass unlinked buttons

--- a/client/src/components/css/Chat.scss
+++ b/client/src/components/css/Chat.scss
@@ -269,7 +269,7 @@
     width: 100%;
     display: block;
     border-radius: 10px;
-    background-color: red;
+    background-color: $primary-color;
     color: white;
     border: none;
     outline: none;
