--- a/client/src/components/css/Chat.scss
+++ b/client/src/components/css/Chat.scss
@@ -1,9 +1,13 @@
 @import './Global';
 
 .chat {
-    margin: 0;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
+
+    // Fixing the width [BETA]
+    max-width: 375px;
+    box-shadow: black 0px 0px 10px;
 }
 
 .chatHeader {
